--- a/tests/examples/ges-ui.glade
+++ b/tests/examples/ges-ui.glade
@@ -133,8 +133,8 @@
                     <child>
                       <object class="GtkImageMenuItem" id="delete_item">
                         <property name="visible">True</property>
-                        <property name="related_action">delete</property>
                         <property name="use_action_appearance">True</property>
+                        <property name="related_action">delete</property>
                         <property name="use_underline">True</property>
                         <property name="use_stock">True</property>
                       </object>
@@ -161,15 +161,15 @@
                     <child>
                       <object class="GtkMenuItem" id="add_file_item">
                         <property name="visible">True</property>
-                        <property name="related_action">add_file</property>
                         <property name="use_action_appearance">True</property>
+                        <property name="related_action">add_file</property>
                       </object>
                     </child>
                     <child>
                       <object class="GtkMenuItem" id="menuitem4">
                         <property name="visible">True</property>
-                        <property name="related_action">add_text</property>
                         <property name="use_action_appearance">True</property>
+                        <property name="related_action">add_text</property>
                       </object>
                     </child>
                     <child>
@@ -181,8 +181,8 @@
                     <child>
                       <object class="GtkImageMenuItem" id="menuitem2">
                         <property name="visible">True</property>
-                        <property name="related_action">play</property>
                         <property name="use_action_appearance">True</property>
+                        <property name="related_action">play</property>
                         <property name="use_underline">True</property>
                         <property name="use_stock">True</property>
                       </object>
@@ -358,6 +358,40 @@
                     <property name="visible">True</property>
                     <property name="spacing">6</property>
                     <child>
+                      <object class="GtkHBox" id="generic_duration">
+                        <property name="visible">True</property>
+                        <property name="spacing">6</property>
+                        <child>
+                          <object class="GtkLabel" id="label4">
+                            <property name="visible">True</property>
+                            <property name="xalign">1</property>
+                            <property name="xpad">12</property>
+                            <property name="label" translatable="yes">Duration:</property>
+                          </object>
+                          <packing>
+                            <property name="expand">False</property>
+                            <property name="fill">False</property>
+                            <property name="position">0</property>
+                          </packing>
+                        </child>
+                        <child>
+                          <object class="GtkEntry" id="seconds">
+                            <property name="visible">True</property>
+                            <property name="can_focus">True</property>
+                            <property name="invisible_char">&#x25CF;</property>
+                          </object>
+                          <packing>
+                            <property name="position">1</property>
+                          </packing>
+                        </child>
+                      </object>
+                      <packing>
+                        <property name="expand">False</property>
+                        <property name="fill">False</property>
+                        <property name="position">0</property>
+                      </packing>
+                    </child>
+                    <child>
                       <object class="GtkVBox" id="filesource_properties">
                         <property name="visible">True</property>
                         <property name="spacing">6</property>
@@ -444,7 +478,7 @@
                       <packing>
                         <property name="expand">False</property>
                         <property name="fill">False</property>
-                        <property name="position">0</property>
+                        <property name="position">1</property>
                       </packing>
                     </child>
                     <child>
@@ -540,7 +574,7 @@
                       <packing>
                         <property name="expand">False</property>
                         <property name="fill">False</property>
-                        <property name="position">1</property>
+                        <property name="position">2</property>
                       </packing>
                     </child>
                   </object>
@@ -570,12 +604,14 @@
   <object class="GtkTreeSelection" id="selection"/>
   <object class="GtkSizeGroup" id="LabelSizeGroup">
     <widgets>
+      <widget name="label4"/>
       <widget name="label3"/>
       <widget name="label2"/>
       <widget name="label_inpoint"/>
       <widget name="label_duration"/>
       <widget name="label_duration"/>
       <widget name="label_inpoint"/>
+      <widget name="label4"/>
     </widgets>
   </object>
   <object class="GtkAction" id="delete">
